--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.5.4"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
